# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("conf_patch_libinput_quirks_10-generic-keyboard.quirks") {
  source = "//third_party/libinput/quirks/10-generic-keyboard.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_10-generic-lid.quirks") {
  source = "//third_party/libinput/quirks/10-generic-lid.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_10-generic-trackball.quirks") {
  source = "//third_party/libinput/quirks/10-generic-trackball.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_30-vendor-aiptek.quirks") {
  source = "//third_party/libinput/quirks/30-vendor-aiptek.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_30-vendor-alps.quirks") {
  source = "//third_party/libinput/quirks/30-vendor-alps.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_30-vendor-contour.quirks") {
  source = "//third_party/libinput/quirks/30-vendor-contour.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_30-vendor-cypress.quirks") {
  source = "//third_party/libinput/quirks/30-vendor-cypress.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_30-vendor-elantech.quirks") {
  source = "//third_party/libinput/quirks/30-vendor-elantech.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_30-vendor-ibm.quirks") {
  source = "//third_party/libinput/quirks/30-vendor-ibm.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_30-vendor-kensington.quirks") {
  source = "//third_party/libinput/quirks/30-vendor-kensington.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_30-vendor-logitech.quirks") {
  source = "//third_party/libinput/quirks/30-vendor-logitech.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_30-vendor-madcatz.quirks") {
  source = "//third_party/libinput/quirks/30-vendor-madcatz.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_30-vendor-microsoft.quirks") {
  source = "//third_party/libinput/quirks/30-vendor-microsoft.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_30-vendor-razer.quirks") {
  source = "//third_party/libinput/quirks/30-vendor-razer.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_30-vendor-synaptics.quirks") {
  source = "//third_party/libinput/quirks/30-vendor-synaptics.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_30-vendor-trust.quirks") {
  source = "//third_party/libinput/quirks/30-vendor-trust.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_30-vendor-vmware.quirks") {
  source = "//third_party/libinput/quirks/30-vendor-vmware.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_30-vendor-wacom.quirks") {
  source = "//third_party/libinput/quirks/30-vendor-wacom.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_50-system-acer.quirks") {
  source = "//third_party/libinput/quirks/50-system-acer.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_50-system-apple.quirks") {
  source = "//third_party/libinput/quirks/50-system-apple.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_50-system-asus.quirks") {
  source = "//third_party/libinput/quirks/50-system-asus.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_50-system-chicony.quirks") {
  source = "//third_party/libinput/quirks/50-system-chicony.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_50-system-cyborg.quirks") {
  source = "//third_party/libinput/quirks/50-system-cyborg.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_50-system-dell.quirks") {
  source = "//third_party/libinput/quirks/50-system-dell.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_50-system-google.quirks") {
  source = "//third_party/libinput/quirks/50-system-google.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_50-system-hp.quirks") {
  source = "//third_party/libinput/quirks/50-system-hp.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_50-system-lenovo.quirks") {
  source = "//third_party/libinput/quirks/50-system-lenovo.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_50-system-sony.quirks") {
  source = "//third_party/libinput/quirks/50-system-sony.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_50-system-system76.quirks") {
  source = "//third_party/libinput/quirks/50-system-system76.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

ohos_prebuilt_etc("conf_patch_libinput_quirks_50-system-toshiba.quirks") {
  source = "//third_party/libinput/quirks/50-system-toshiba.quirks"
  relative_install_dir = "libinput/quirks"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

group("prebuild_libinput") {
  deps = [
    ":conf_patch_libinput_quirks_10-generic-keyboard.quirks",
    ":conf_patch_libinput_quirks_10-generic-lid.quirks",
    ":conf_patch_libinput_quirks_10-generic-trackball.quirks",
    ":conf_patch_libinput_quirks_30-vendor-aiptek.quirks",
    ":conf_patch_libinput_quirks_30-vendor-alps.quirks",
    ":conf_patch_libinput_quirks_30-vendor-contour.quirks",
    ":conf_patch_libinput_quirks_30-vendor-cypress.quirks",
    ":conf_patch_libinput_quirks_30-vendor-elantech.quirks",
    ":conf_patch_libinput_quirks_30-vendor-ibm.quirks",
    ":conf_patch_libinput_quirks_30-vendor-kensington.quirks",
    ":conf_patch_libinput_quirks_30-vendor-logitech.quirks",
    ":conf_patch_libinput_quirks_30-vendor-madcatz.quirks",
    ":conf_patch_libinput_quirks_30-vendor-microsoft.quirks",
    ":conf_patch_libinput_quirks_30-vendor-razer.quirks",
    ":conf_patch_libinput_quirks_30-vendor-synaptics.quirks",
    ":conf_patch_libinput_quirks_30-vendor-trust.quirks",
    ":conf_patch_libinput_quirks_30-vendor-vmware.quirks",
    ":conf_patch_libinput_quirks_30-vendor-wacom.quirks",
    ":conf_patch_libinput_quirks_50-system-acer.quirks",
    ":conf_patch_libinput_quirks_50-system-apple.quirks",
    ":conf_patch_libinput_quirks_50-system-asus.quirks",
    ":conf_patch_libinput_quirks_50-system-chicony.quirks",
    ":conf_patch_libinput_quirks_50-system-cyborg.quirks",
    ":conf_patch_libinput_quirks_50-system-dell.quirks",
    ":conf_patch_libinput_quirks_50-system-google.quirks",
    ":conf_patch_libinput_quirks_50-system-hp.quirks",
    ":conf_patch_libinput_quirks_50-system-lenovo.quirks",
    ":conf_patch_libinput_quirks_50-system-sony.quirks",
    ":conf_patch_libinput_quirks_50-system-system76.quirks",
    ":conf_patch_libinput_quirks_50-system-toshiba.quirks",
  ]
}
