# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../multimodalinput_mini.gni")
 
config("mmi_custom_config_parser_cfg") {
  include_dirs = [
    "${mmi_path}/util/common/include",
    "${mmi_path}/service/custom_config_parser/include",
    "${mmi_path}/service/product_property_config/include"
  ]
}

config("mmi_custom_config_parser_public_configs") {
  include_dirs = [ "${mmi_path}/service/custom_config_parser/include" ]
}

ohos_source_set("mmi_custom_config_parser") {
  part_name = "input"
  subsystem_name = "multimodalinput"
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "${mmi_path}/service/custom_config_parser/src/bundle_name_parser.cpp",
    "${mmi_path}/service/custom_config_parser/src/product_type_parser.cpp",
    "${mmi_path}/service/custom_config_parser/src/special_input_device_parser.cpp",
    "${mmi_path}/service/custom_config_parser/src/misc_product_type_parser.cpp",
    "${mmi_path}/service/custom_config_parser/src/product_name_definition_parser.cpp"
  ]

  configs = [ ":mmi_custom_config_parser_cfg" ]

  public_configs = [ ":mmi_custom_config_parser_public_configs" ]

  deps = [
    "${mmi_path}/util:mmi_json_parser",
    "${mmi_path}/util:libmmi-util",
  ]
  external_deps = [
    "c_utils:utils",
    "cJSON:cjson",
    "hilog:libhilog",
  ]
}