# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimodalinput/input/multimodalinput_mini.gni")
dinput_path = "${mmi_path}/service/dinput"

config("mmi_dinput_config") {
  include_dirs = [
    "//foundation/multimodalinput/input/common/include",
    "//foundation/multimodalinput/input/interfaces/native/innerkits/common/include",
    "//foundation/multimodalinput/input/interfaces/native/innerkits/event/include",
    "//foundation/multimodalinput/input/util/common/include",
    "${dinput_path}/include",
  ]

  if (input_feature_distributed) {
    include_dirs += [
      "//foundation/distributedhardware/distributed_input/common/include",
      "//foundation/distributedhardware/distributed_input/frameworks/include",
      "//foundation/distributedhardware/distributed_input/interfaces/ipc/include",
    ]
  }
}
if (input_feature_distributed) {
  ohos_source_set("mmi_dinput_service") {
    sources = [
      "${dinput_path}/src/call_dinput_service.cpp",
      "${dinput_path}/src/call_dinput_stub.cpp",
    ]

    public_configs = [ ":mmi_dinput_config" ]

    configs = [ ":mmi_dinput_config" ]

    defines = [ "OHOS_DISTRIBUTED_INPUT_MODEL" ]

    external_deps = [
      "hiviewdfx_hilog_native:libhilog",
      "ipc:ipc_core",
      "safwk:system_ability_fwk",
    ]

    if (input_feature_distributed) {
      external_deps += [ "distributed_input:libdinput_sdk" ]
    }
  }
  ohos_source_set("mmi_dinput_proxy") {
    sources = [
      "${dinput_path}/src/call_dinput_death_recipient.cpp",
      "${dinput_path}/src/call_dinput_proxy.cpp",
    ]

    public_configs = [ ":mmi_dinput_config" ]

    configs = [ ":mmi_dinput_config" ]

    defines = [ "OHOS_DISTRIBUTED_INPUT_MODEL" ]
    external_deps = [
      "hiviewdfx_hilog_native:libhilog",
      "ipc:ipc_core",
      "safwk:system_ability_fwk",
    ]
  }
}
