# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../multimodalinput_mini.gni")

ohos_shared_library("mmi_joystick_event_normalization") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  defines = input_default_defines

  include_dirs = [
    "${mmi_path}/intention/prototype/include",
    "${mmi_path}/service/joystick/include",
  ]

  sources = [
    "src/joystick_event_normalize.cpp",
    "src/joystick_event_processor.cpp",
    "src/joystick_layout_map.cpp",
  ]

  configs = [ "${mmi_path}/common/anco/comm:mmi_anco_channel_config" ]

  cflags = [ "-Wno-error=tautological-constant-out-of-range-compare" ]

  deps = [
    "${mmi_path}/common/property_name_mapper:property_name_mapper",
    "${mmi_path}/intention/prototype:input_service_prototype",
    "${mmi_path}/service:libmmi-server",
    "${mmi_path}/util:libmmi-util",
  ]

  external_deps = [
    "ability_runtime:ability_manager",
    "c_utils:utils",
    "cJSON:cjson",
    "config_policy:configpolicy_util",
    "hilog:libhilog",
    "ipc:ipc_single",
    "libinput:libinput-third-mmi",
    "preferences:native_preferences",
  ]

  part_name = "${mmi_part_name}"
  subsystem_name = "${mmi_subsystem_name}"
}

config("joystick_event_normalization_public_config") {
  include_dirs = [
    "include",
    "${mmi_path}/intention/scheduler/component_manager/include",
  ]
}

ohos_source_set("joystick_event_normalization") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "include",
    "${mmi_path}/service/device_config/include",
    "${mmi_path}/service/joystick/include",
  ]

  sources = [ "src/joystick_event_interface.cpp" ]

  configs = [ "${mmi_path}/common/anco/comm:mmi_anco_channel_config" ]

  public_configs = [ ":joystick_event_normalization_public_config" ]

  defines = input_default_defines

  deps = [
    "${mmi_path}/common/anco/comm:anco_channel_interface",
    "${mmi_path}/frameworks/proxy:libmmi-common",
    "${mmi_path}/intention/prototype:input_service_prototype",
    "${mmi_path}/intention/scheduler/component_manager:mmi_component_manager",
    "${mmi_path}/util:libmmi-util",
  ]

  external_deps = [
    "c_utils:utils",
    "ffrt:libffrt",
    "hilog:libhilog",
    "ipc:ipc_single",
    "preferences:native_preferences",
  ]

  part_name = "${mmi_part_name}"
  subsystem_name = "${mmi_subsystem_name}"
}
