# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../multimodalinput_mini.gni")

# Dynamic loaded module; Loaded when a mouse device is plugged in or when mouse events are injected.
ohos_shared_library("mmi_mouse_event_normalizer") {
branch_protector_ret = "pac_ret"
sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
}

defines = input_default_defines

include_dirs = [
    "${mmi_path}/intention/prototype/include",
    "${mmi_path}/service/mouse_event_normalize/include",
    "${mmi_path}/service/device_config/include",
    "${mmi_path}/service/common/include",
    "${mmi_path}/frameworks/proxy/event_handler/include",
    "${mmi_path}/frameworks/proxy/events/include",
    "${mmi_path}/interfaces/native/innerkits/event/include",
    "${mmi_path}/interfaces/native/innerkits/proxy/include",
    "${mmi_path}/service/custom_config_parser/include",
    "${mmi_path}/service/product_property_config/include",
    "${mmi_path}/service/dfx/include",
    "${mmi_path}/service/event_dispatch/include",
    "${mmi_path}/util/json_parser/include",
    "${mmi_path}/service/common/timer_manager/include",
]

sources = [
    "src/mouse_event_normalize.cpp",
    "src/mouse_device_state.cpp",
    "src/mouse_transform_processor.cpp",
    "src/pointer_motion_acceleration.cpp"
]

configs = [ "${mmi_path}/common/anco/comm:mmi_anco_channel_config" ]

deps = [
    "${mmi_path}/service:libmmi-server",
    "${mmi_path}/intention/prototype:input_service_prototype",
    "${mmi_path}/intention/scheduler/component_manager:mmi_component_manager",
    "${mmi_path}/util:libmmi-util",
    "${mmi_path}/service/custom_config_parser:mmi_custom_config_parser",
    "${mmi_path}/service:mmi_rust",
    ":mouse_preference_accessor"
]

external_deps = [
    "c_utils:utils",
    "cJSON:cjson",
    "config_policy:configpolicy_util",
    "hilog:libhilog",
    "ipc:ipc_single",
    "ffrt:libffrt",
    "preferences:native_preferences",
    "hisysevent:libhisysevent",
    "init:libbegetutil",
    "window_manager:libdm_lite",
    "graphic_2d:librender_service_client",
    "window_manager:libwsutils",
    "libinput:libinput-third-mmi",
    "ability_runtime:ability_manager",
]

part_name = "${mmi_part_name}"
subsystem_name = "${mmi_subsystem_name}"
}


config("mouse_event_normalization_public_config") {
    include_dirs = [ "include" ]
}

ohos_source_set("mouse_event_normalizer") {
branch_protector_ret = "pac_ret"
sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
}

include_dirs = [
    "include",
    "${mmi_path}/service/device_config/include",
    "${mmi_path}/service/common/include",
]

sources = [
    "src/mouse_event_interface.cpp"
 ]

configs = [ "${mmi_path}/common/anco/comm:mmi_anco_channel_config" ]

public_configs = [ ":mouse_event_normalization_public_config" ]

defines = input_default_defines

deps = [
    "${mmi_path}/frameworks/proxy:libmmi-common",
    "${mmi_path}/intention/prototype:input_service_prototype",
    "${mmi_path}/intention/scheduler/component_manager:mmi_component_manager",
    "${mmi_path}/util:libmmi-util",
    ":mouse_preference_accessor"
]

external_deps = [
    "c_utils:utils",
    "ffrt:libffrt",
    "hilog:libhilog",
    "ipc:ipc_single",
    "libinput:libinput-third-mmi",
    "preferences:native_preferences",
]

part_name = "${mmi_part_name}"
subsystem_name = "${mmi_subsystem_name}"
}

ohos_source_set("mouse_preference_accessor") {
branch_protector_ret = "pac_ret"
sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
}

include_dirs = [
    "include",
    "${mmi_path}/service/device_config/include",
    "${mmi_path}/service/common/include",
]

sources = [
    "src/mouse_preference_accessor.cpp"
]

configs = [ "${mmi_path}/common/anco/comm:mmi_anco_channel_config" ]

defines = input_default_defines

deps = [
    "${mmi_path}/intention/prototype:input_service_prototype",
    "${mmi_path}/util:libmmi-util",
]

external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "preferences:native_preferences",
    "libinput:libinput-third-mmi",
    "ipc:ipc_single",
]

part_name = "${mmi_part_name}"
subsystem_name = "${mmi_subsystem_name}"
}