# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../multimodalinput_mini.gni")

ohos_shared_library("mmi_touch_gesture_manager") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  defines = input_default_defines

  if (input_feature_product == "pc") {
    defines += [ "TOUCH_GESTURE_MONITOR_ENABLED" ]
  }

  include_dirs = [
    "${mmi_path}/intention/prototype/include",
    "${mmi_path}/service/event_handler/include",
    "${mmi_path}/service/touch_event_normalize/include",
    "${mmi_path}/service/common/include",
    "${mmi_path}/service/common/timer_manager/include",
  ]

  sources = [
    "src/touch_gesture_adapter.cpp",
    "src/touch_gesture_detector.cpp",
    "src/touch_gesture_manager.cpp",
  ]

  configs = [ "${mmi_path}/common/anco/comm:mmi_anco_channel_config" ]

  deps = [
    "${mmi_path}/frameworks/proxy:libmmi-common",
    "${mmi_path}/intention/prototype:input_service_prototype",
    "${mmi_path}/util:libmmi-util",
  ]

  external_deps = [
    "c_utils:utils",
    "cJSON:cjson",
    "config_policy:configpolicy_util",
    "hilog:libhilog",
    "ipc:ipc_single",
    "preferences:native_preferences",
  ]

  part_name = "${mmi_part_name}"
  subsystem_name = "${mmi_subsystem_name}"
}

config("touch_gesture_manager_public_config") {
  include_dirs = [ "include" ]
}

ohos_source_set("touch_gesture_manager") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  branch_protector_ret = "pac_ret"

  include_dirs = [
    "include",
    "${mmi_path}/service/common/include",
  ]

  sources = [ "src/touch_gesture_interface.cpp" ]

  configs = [ "${mmi_path}/common/anco/comm:mmi_anco_channel_config" ]

  public_configs = [ ":touch_gesture_manager_public_config" ]

  defines = input_default_defines

  deps = [
    "${mmi_path}/common/anco/comm:anco_channel_interface",
    "${mmi_path}/frameworks/proxy:libmmi-common",
    "${mmi_path}/intention/prototype:input_service_prototype",
    "${mmi_path}/intention/scheduler/component_manager:mmi_component_manager",
    "${mmi_path}/util:libmmi-util",
  ]

  external_deps = [
    "c_utils:utils",
    "ffrt:libffrt",
    "hilog:libhilog",
    "ipc:ipc_single",
    "preferences:native_preferences",
  ]

  part_name = "${mmi_part_name}"
  subsystem_name = "${mmi_subsystem_name}"
}
